--- a/src/components/body/body.css
+++ b/src/components/body/body.css
@@ -56,3 +56,16 @@
 
 }
 
+@media only screen and (max-width: 600px) {
+    .section{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .parag{
+        display: none;
+    }
+
+    
+}
+
