--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -41,7 +41,13 @@
     position: absolute;
     right: 150px;
     margin-top: 95px;
-    
-    
+}
+
+@media only screen and (max-width: 600px) {
+    .foot{
+        display: flex;
+        flex-direction: column ;
+    }
+
     
 }
