--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -29,3 +29,13 @@
     border-radius: 50%;
     float: left;
 }
+
+
+@media only screen and (max-width: 600px) {
+    .contItems{
+        display: flex;
+        flex-direction: column;
+    }
+
+    
+}
